add properties to the Layout component

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,6 +2,8 @@
 import Layout from '../layouts/BlogPost.astro';
 ---
 
-<Layout title="Page Not Found.">
-    <h1>404 ☹️ </h1>
+<Layout 	title="Page not found ☹️"
+description="Page not found."
+pubDate={new Date()}
+heroImage="">
 </Layout>
