added image to about me page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,13 +2,20 @@
 import Layout from '../layouts/BlogPost.astro';
 ---
 
+
+
 <Layout
 	title="About Me"
 	description="Simply a developer"
 	pubDate={new Date('December 12 2024')}
-	heroImage="https://avatars.githubusercontent.com/u/23292806?v=4"
+	heroImage=""
 >
+
+<div style=text-align:center>
+	<img width={'40%'} height={360} src="https://avatars.githubusercontent.com/u/23292806?v=4" alt="" />
 	<p>
 		Someone who enjoys coding and doesn’t take life too seriously.
 	</p>
+</div>
+
 </Layout>
