--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/BlogPost.astro';
 <Layout
 	title="About Me"
 	description="Simply a developer"
-	pubDate={new Date('December 12 2024')}
+	pubDate={new Date()}
 	heroImage=""
 >
 
