--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -98,7 +98,7 @@ const posts = (await getCollection('blog')).sort(
 						posts.map((post) => (
 							<li>
 								<a href={`/blog/${post.id}/`}>
-									<img width={'40%'} style="min-height:150px" src={post.data.heroImage} alt="" />
+									<img width={'150px'} height="150px" style="min-height:150px; max-height:150px; margin-bottom:32px" src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.data.pubDate} />
