--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} Chkhachkhi Sami. All rights reserved.
+	&copy; {today.getFullYear()} Chkhachkhi Sami. Made with ❤️
 	<div class="social-links">
 		<a href="https://github.com/chsami" target="_blank">
 			<span class="sr-only">Go to Astro's GitHub repo</span>
