--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const today = new Date();
 	&copy; {today.getFullYear()} Chkhachkhi Sami. Made with ❤️
 	<div class="social-links">
 		<a href="https://github.com/chsami" target="_blank">
-			<span class="sr-only">Go to Astro's GitHub repo</span>
+			<span class="sr-only">Go to Chsami GitHub repo</span>
 			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" astro-icon="social/github"
 				><path
 					fill="currentColor"
